unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/bt_stripe__Payment_Gateway__c.object-meta.xml
<CustomObject>
    <description>A Payment Gateway record stores data, tokens and settings for your payment provider.</description>
    <label>Payment Gateway</label>
    <nameField>
        <label>Payment Gateway Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Gateways</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>