unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_paylink__Default_PayLink_Configuration__c.field-meta.xml
<CustomField>
    <fullName>bt_paylink__Default_PayLink_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the PayLink Configuration on a Transaction is blank, this Default PayLink Configuration will be used.</description>
    <inlineHelpText>If the PayLink Configuration on a Transaction is blank, this Default PayLink Configuration will be used.</inlineHelpText>
    <label>Default PayLink Configuration</label>
    <referenceTo>bt_paylink__PayLink_Configuration__c</referenceTo>
    <relationshipLabel>Payment Gateways (Default For)</relationshipLabel>
    <relationshipName>Payment_Gateways</relationshipName>
    <type>Lookup</type>
</CustomField>