unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__Accepted_Payment_Methods__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Accepted_Payment_Methods__c</fullName>
    <inlineHelpText>Used by the mobile app to determine which kind of Payment Methods are accepted for the Payment Gateway.</inlineHelpText>
    <label>Accepted Payment Methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Card (Reader)</fullName>
            </value>
            <value>
                <fullName>Card (Typed)</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Money Order</fullName>
            </value>
            <value>
                <fullName>Tap to Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>