unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__CashNet_Checkout_Name__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__CashNet_Checkout_Name__c</fullName>
    <label>CashNet Checkout Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>