unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__CashNet_Item_Code__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__CashNet_Item_Code__c</fullName>
    <label>CashNet Item Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>