unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__CashNet_Operator_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__CashNet_Operator_Id__c</fullName>
    <label>CashNet Operator Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>