unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__Default_Country__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Default_Country__c</fullName>
    <inlineHelpText>Select default country you want to display for a Country field in PayLink or Events. Leave blank if you do not want a default value.</inlineHelpText>
    <label>Default Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>bt_stripe__Countries</valueSetName>
    </valueSet>
</CustomField>