unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__Enable_Auth_Net_CCV_Filter__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Enable_Auth_Net_CCV_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, transactions using an Authorize.net gateway will require the user to re-enter the CVV code for the card being used.</description>
    <inlineHelpText>When checked, transactions using an Authorize.net gateway will require the user to re-enter the CVV code for the card being used.</inlineHelpText>
    <label>Enable Authorize.Net CCV Filter</label>
    <type>Checkbox</type>
</CustomField>