unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__Error_Type__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Error_Type__c</fullName>
    <label>Error Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>