unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__Gateway_API_Version__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Gateway_API_Version__c</fullName>
    <inlineHelpText>This field is decides which api version to be used while making the callout. If not defined, use the api version defined by Stripe Account</inlineHelpText>
    <label>Gateway API Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>