unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__Held_in_Reserve__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Held_in_Reserve__c</fullName>
    <description>Funds held due to negative balances on connected Custom/Express accounts. This field is updated automatically..</description>
    <inlineHelpText>Funds held due to negative balances on connected Custom/Express accounts. This field is updated automatically..</inlineHelpText>
    <label>Held in Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>