unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__Level3__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Level3__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked it will populate the Level 3 fields on the Stripe API call to authorize or capture a charge or payment intent.</inlineHelpText>
    <label>Level 3</label>
    <type>Checkbox</type>
</CustomField>