unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__Live_Validation_Mode__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Live_Validation_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Payment Method will use &quot;liveMode&quot; to submit a zero-dollar or one-cent transaction (depending on card type and processor support) to confirm the card number belongs to an active credit or debit account. If unchecked, it will use &quot;testMode&quot; to perform a Luhn mod-10 check on the card number, without further validation.</description>
    <inlineHelpText>If checked, Payment Method will use &quot;liveMode&quot; to submit a zero-dollar or one-cent transaction (depending on card type and processor support) to confirm the card number belongs to an active credit or debit account. If unchecked, it will use &quot;testMode&quot; to perform a Luhn mod-10 check on the card number, without further validation.</inlineHelpText>
    <label>Live Validation Mode (Authorize.Net)</label>
    <type>Checkbox</type>
</CustomField>