unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Logo_URL__c</fullName>
    <label>Logo URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>