unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__Plaid_Secret__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Plaid_Secret__c</fullName>
    <inlineHelpText>Set if you want to use Plaid with a Stripe Payment Gateway for ACH instant verification.</inlineHelpText>
    <label>Plaid Secret</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>