unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__Provider__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Provider__c</fullName>
    <label>Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stripe</fullName>
            </value>
            <value>
                <fullName>Spreedly</fullName>
            </value>
            <value>
                <fullName>Authorize.net</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>TouchNet</fullName>
            </value>
            <value>
                <fullName>CashNet</fullName>
                <label>Transact Payments / CASHNet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>