unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__Salesforce_Balances_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Salesforce_Balances_Last_Updated__c</fullName>
    <label>Salesforce Balances Last Updated</label>
    <type>DateTime</type>
</CustomField>