unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__Spreedly_Configured_Gateway__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Spreedly_Configured_Gateway__c</fullName>
    <inlineHelpText>Shows which gateway has been configured with spreedly.</inlineHelpText>
    <label>Spreedly Configured Gateway</label>
    <length>255</length>
    <type>Text</type>
</CustomField>