unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__Spreedly_Environment_Key__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Spreedly_Environment_Key__c</fullName>
    <inlineHelpText>Set this field to configure gateway with Spreedly.</inlineHelpText>
    <label>Spreedly Environment Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>