unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__Stripe_Access_Token2__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Stripe_Access_Token2__c</fullName>
    <label>Stripe Access Token</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>