unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__Stripe_Balance_Available__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Stripe_Balance_Available__c</fullName>
    <description>The balance available for this account as updated from Stripe.</description>
    <inlineHelpText>The balance available for this account as updated from Stripe.</inlineHelpText>
    <label>Stripe Balance Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>