unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__Stripe_Publishable_Key__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Stripe_Publishable_Key__c</fullName>
    <inlineHelpText>Store a Public Key for the Gateway.</inlineHelpText>
    <label>Gateway Public Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>