unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__Stripe_User_Email__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Stripe_User_Email__c</fullName>
    <inlineHelpText>This field is auto-populated after successfully authenticating to gateway using the Auth button.</inlineHelpText>
    <label>Gateway User Email</label>
    <type>Email</type>
</CustomField>