unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__Stripe_User_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Stripe_User_Id__c</fullName>
    <inlineHelpText>This field is auto-populated after successfully authenticating to the Gateway using the Auth button.</inlineHelpText>
    <label>Gateway User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>