unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__Test_Mode__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Test_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this Payment Gateway runs in test mode. When connecting a new Payment Gateway from the record detail Page Layout (not from the Setup Wizard), check this box before clicking Connect to Stripe to connect your Stripe account in Test mode. Set automatically when the Payment Gateway is connected from the Setup Wizard.</description>
    <inlineHelpText>If checked, Gateway will run in test mode. When connecting a new Payment Gateway, check this box before &#39;Connect to Gateway&#39; to connect your gateway account in Test mode. Set automatically from the Setup Wizard. Do not uncheck after Stripe is connected.</inlineHelpText>
    <label>Test Mode</label>
    <type>Checkbox</type>
</CustomField>