unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__Touchnet_TLink_Password__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Touchnet_TLink_Password__c</fullName>
    <inlineHelpText>TouchNet TLink Password.</inlineHelpText>
    <label>Touchnet TLink Password</label>
    <length>150</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>