unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__Touchnet_TLink_Service_URL__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Touchnet_TLink_Service_URL__c</fullName>
    <inlineHelpText>TouchNet TLink Service URL</inlineHelpText>
    <label>Touchnet TLink Service URL</label>
    <type>Url</type>
</CustomField>