unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__Touchnet_TLink_UserName__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Touchnet_TLink_UserName__c</fullName>
    <inlineHelpText>TouchNet TLink Username.</inlineHelpText>
    <label>Touchnet TLink UserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>