unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__TouchNet_uPay_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__TouchNet_uPay_Site_ID__c</fullName>
    <description>A numeric non-negative integer value that identifies the uPay site responsible for processing the transaction</description>
    <inlineHelpText>A numeric non-negative integer value that identifies the uPay site responsible for processing the transaction</inlineHelpText>
    <label>TouchNet uPay Site ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>