unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__TouchNet_uPay_Site_URL__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__TouchNet_uPay_Site_URL__c</fullName>
    <description>Corresponding uPay Site URL for the given uPay Site ID</description>
    <inlineHelpText>Corresponding uPay Site URL for the given uPay Site ID</inlineHelpText>
    <label>TouchNet uPay Site URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>