unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/fields/bt_stripe__Webhook_Label__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Webhook_Label__c</fullName>
    <description>Webhook Label can not have a space or any special characters in the name, except an underscore (ex. _).</description>
    <inlineHelpText>Webhook Label can not have a space or any special characters in the name, except an underscore (ex. _).</inlineHelpText>
    <label>Webhook Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>