unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/listViews/bt_stripe__All.listView-meta.xml
<ListView>
    <fullName>bt_stripe__All</fullName>
    <columns>NAME</columns>
    <columns>bt_stripe__Default__c</columns>
    <columns>bt_stripe__Test_Mode__c</columns>
    <columns>bt_stripe__Webhook_Label__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>