unpackaged/main/default/objects/bt_stripe__Payment_Gateway__c/listViews/bt_stripe__Test.listView-meta.xml
<ListView>
    <fullName>bt_stripe__Test</fullName>
    <columns>NAME</columns>
    <columns>bt_stripe__Default__c</columns>
    <columns>bt_stripe__Test_Mode__c</columns>
    <columns>bt_stripe__Webhook_Label__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>bt_stripe__Test_Mode__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Test</label>
</ListView>